<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DatabaseActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.023014959" />

    <ImageView
        android:id="@+id/backBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guideline32"
        app:layout_constraintTop_toTopOf="@+id/guideline38"
        app:srcCompat="@drawable/backarrow" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96107054" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90794015" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9689298" />

    <TextView
        android:id="@+id/appNameAfterScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline38" />

    <ImageView
        android:id="@+id/foodContainingAfterScanBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline42"
        app:layout_constraintEnd_toStartOf="@+id/guideline31"
        app:layout_constraintStart_toStartOf="@+id/guideline32"
        app:layout_constraintTop_toTopOf="@+id/guideline40"
        app:srcCompat="@drawable/afterscanbuttonfoods" />

    <ImageView
        android:id="@+id/compareTableAfterScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline40"
        app:layout_constraintEnd_toStartOf="@+id/guideline31"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="@+id/guideline32"
        app:layout_constraintTop_toTopOf="@+id/guideline39"
        app:srcCompat="@drawable/afterscan_table" />

    <TextView
        android:id="@+id/vitaminBrandAfterScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/compareWithfoodAfterScanBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toEndOf="@+id/pillBottleAfterScan" />

    <TextView
        android:id="@+id/amountOfVitaminAfterScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/guideline39"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="@+id/compareTableAfterScan"
        app:layout_constraintTop_toTopOf="@+id/guideline41" />

    <TextView
        android:id="@+id/vitaminNameAfterScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/vitaminBrandAfterScan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toEndOf="@+id/pillBottleAfterScan" />

    <ImageView
        android:id="@+id/menuAfterScanBtn"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_marginBottom="-10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/homebarbackground" />

    <ImageView
        android:id="@+id/scanAfterScanBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline34"
        app:layout_constraintEnd_toStartOf="@+id/guideline30"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/guideline33"
        app:layout_constraintVertical_bias="0.968"
        app:srcCompat="@drawable/scanbutton" />

    <ImageView
        android:id="@+id/searchAfterScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/searchicon" />

    <ImageView
        android:id="@+id/profileAfterScanBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/usericon" />

    <ImageView
        android:id="@+id/RiDescriptionAfterScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline31"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/guideline32"
        app:layout_constraintTop_toTopOf="@+id/guideline42"
        app:srcCompat="@drawable/afterscanbox1" />

    <ImageView
        android:id="@+id/UpperLimitDiscriptionAfterScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline43"
        app:layout_constraintEnd_toStartOf="@+id/guideline31"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/guideline32"
        app:srcCompat="@drawable/afterscanbox2" />

    <TextView
        android:id="@+id/onePillAfterScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/onePill"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/referenceIntakeAfterScan"
        app:layout_constraintStart_toStartOf="@+id/compareTableAfterScan"
        app:layout_constraintTop_toTopOf="@+id/compareTableAfterScan"
        app:layout_constraintVertical_bias="0.833" />

    <TextView
        android:id="@+id/referenceIntakeAfterScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/referenceIntake"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/upperLimitAfterScan"
        app:layout_constraintStart_toStartOf="@+id/compareTableAfterScan" />

    <TextView
        android:id="@+id/upperLimitAfterScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/upperLimit"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/compareTableAfterScan"
        app:layout_constraintStart_toStartOf="@+id/compareTableAfterScan" />

    <TextView
        android:id="@+id/AmountFullUpperAfterScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:text="@string/MissingImplULUnit"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/compareTableAfterScan"
        app:layout_constraintEnd_toEndOf="@+id/compareTableAfterScan"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/PercentageUpperLimitInPillAfterScan" />

    <TextView
        android:id="@+id/AmountFullRiAfterScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/AmountFullUpperAfterScan"
        app:layout_constraintEnd_toEndOf="@+id/compareTableAfterScan"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/percemtageRiInPillAfterScan" />

    <TextView
        android:id="@+id/AmountInPillAfterScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/AmountFullRiAfterScan"
        app:layout_constraintEnd_toEndOf="@+id/compareTableAfterScan"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/pillRiAfterScan"
        app:layout_constraintTop_toTopOf="@+id/compareTableAfterScan"
        app:layout_constraintVertical_bias="0.357" />

    <TextView
        android:id="@+id/pillRiAfterScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/percemtageRiInPillAfterScan"
        app:layout_constraintStart_toEndOf="@+id/onePillAfterScan"
        app:layout_constraintTop_toTopOf="@+id/compareTableAfterScan"
        app:layout_constraintVertical_bias="0.357" />

    <TextView
        android:id="@+id/percemtageRiInPillAfterScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="20dp"
        android:text="@string/fullRI"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/PercentageUpperLimitInPillAfterScan"
        app:layout_constraintStart_toEndOf="@+id/referenceIntakeAfterScan" />

    <TextView
        android:id="@+id/PercentageUpperLimitInPillAfterScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="12dp"
        android:text="@string/MissingImplULRI"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/compareTableAfterScan"
        app:layout_constraintStart_toEndOf="@+id/upperLimitAfterScan" />

    <ImageView
        android:id="@+id/pillBottleAfterScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline41"
        app:layout_constraintEnd_toStartOf="@+id/guideline44"
        app:layout_constraintHorizontal_bias="0.796"
        app:layout_constraintStart_toStartOf="@+id/guideline37"
        app:layout_constraintTop_toTopOf="@+id/guideline35"
        app:layout_constraintVertical_bias="0.902"
        app:srcCompat="@drawable/afterscanvitaminimage" />

    <ImageView
        android:id="@+id/compareWithfoodAfterScanBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline41"
        app:layout_constraintStart_toStartOf="@+id/guideline44"
        app:srcCompat="@drawable/afterscanbuttoncompare" />

    <TextView
        android:id="@+id/whatIsRiDescription"
        android:layout_width="348dp"
        android:layout_height="69dp"
        android:text="@string/whatIsRiText"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/RiDescriptionAfterScan"
        app:layout_constraintEnd_toEndOf="@+id/RiDescriptionAfterScan"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="@+id/RiDescriptionAfterScan"
        app:layout_constraintTop_toTopOf="@+id/RiDescriptionAfterScan"
        app:layout_constraintVertical_bias="0.804" />

    <TextView
        android:id="@+id/whatIsRi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/whatIsRi"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/whatIsRiDescription"
        app:layout_constraintStart_toStartOf="@+id/whatIsRiDescription"
        app:layout_constraintTop_toTopOf="@+id/RiDescriptionAfterScan"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/whatIsUpperLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/WhatIsUpperLimit"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/whatIsUpperLimitDescription"
        app:layout_constraintStart_toStartOf="@+id/whatIsUpperLimitDescription"
        app:layout_constraintTop_toTopOf="@+id/UpperLimitDiscriptionAfterScan"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/whatIsUpperLimitDescription"
        android:layout_width="350dp"
        android:layout_height="89dp"
        android:text="@string/WhatIsUpperLimitText"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/UpperLimitDiscriptionAfterScan"
        app:layout_constraintEnd_toEndOf="@+id/UpperLimitDiscriptionAfterScan"
        app:layout_constraintStart_toStartOf="@+id/UpperLimitDiscriptionAfterScan"
        app:layout_constraintTop_toTopOf="@+id/UpperLimitDiscriptionAfterScan"
        app:layout_constraintVertical_bias="0.813" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07825086" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.11192214" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.29" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8883774" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.32846716" />

</androidx.constraintlayout.widget.ConstraintLayout>