<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FoodWithVitaminsRIActivity">

    <ImageView
        android:id="@+id/backBtnRi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guideline18"
        app:layout_constraintTop_toTopOf="@+id/guideline16"
        app:srcCompat="@drawable/backarrow" />

    <TextView
        android:id="@+id/appNameRI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline16" />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="wrap_content"
        android:layout_height="73dp"
        android:layout_marginBottom="-10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/homebarbackground" />

    <ImageView
        android:id="@+id/searchBtnRi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/searchicon" />

    <ImageView
        android:id="@+id/profileBtnRi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/usericon" />

    <ImageView
        android:id="@+id/toggleRiRi"
        android:layout_width="186dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView37"
        app:layout_constraintEnd_toEndOf="@+id/imageView37"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView37"
        app:layout_constraintTop_toTopOf="@+id/imageView37"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/whitebox" />

    <ImageView
        android:id="@+id/imageView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toStartOf="@+id/guideline19"
        app:layout_constraintStart_toStartOf="@+id/guideline18"
        app:layout_constraintTop_toTopOf="@+id/guideline15"
        app:srcCompat="@drawable/toggleouter" />

    <ImageView
        android:id="@+id/toggleGramRi"
        android:layout_width="186dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView37"
        app:layout_constraintEnd_toEndOf="@+id/imageView37"
        app:layout_constraintTop_toTopOf="@+id/imageView37"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bluebox" />

    <TextView
        android:id="@+id/firstFoodTextRi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text=""
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/firstFoodPicRi"
        app:layout_constraintStart_toEndOf="@+id/firstFoodPicRi"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/firstFoodNameRi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text=""
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/firstFoodTextRi"
        app:layout_constraintStart_toEndOf="@+id/firstFoodPicRi" />

    <TextView
        android:id="@+id/secondFoodNameRi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text=""
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/secondFoodTextRi"
        app:layout_constraintStart_toStartOf="@+id/firstFoodNameRi" />

    <TextView
        android:id="@+id/secondFoodTextRi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text=""
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/secondFoodPicRi"
        app:layout_constraintStart_toStartOf="@+id/firstFoodTextRi" />

    <TextView
        android:id="@+id/thirdFoodTextRi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text=""
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/thirdFoodPicRi"
        app:layout_constraintStart_toEndOf="@+id/thirdFoodPicRi" />

    <TextView
        android:id="@+id/thirdFoodNameRi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="8dp"
        android:text=""
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/thirdFoodTextRi"
        app:layout_constraintStart_toEndOf="@+id/thirdFoodPicRi" />

    <TextView
        android:id="@+id/fourthFoodNameRi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text=""
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/fourthFoodTextRi"
        app:layout_constraintStart_toStartOf="@+id/thirdFoodTextRi" />

    <TextView
        android:id="@+id/fourthFoodTextRi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/fourthFoodPicRi"
        app:layout_constraintStart_toStartOf="@+id/thirdFoodTextRi" />

    <TextView
        android:id="@+id/riTextRi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FoodWithToggle"
        android:textColor="#2147B1"
        app:layout_constraintBottom_toBottomOf="@+id/toggleRiRi"
        app:layout_constraintEnd_toEndOf="@+id/toggleRiRi"
        app:layout_constraintStart_toStartOf="@+id/toggleRiRi"
        app:layout_constraintTop_toTopOf="@+id/toggleRiRi" />

    <TextView
        android:id="@+id/gramTextRi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RI_Toggle"
        android:textColor="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="@+id/toggleGramRi"
        app:layout_constraintEnd_toEndOf="@+id/imageView37"
        app:layout_constraintStart_toStartOf="@+id/toggleGramRi"
        app:layout_constraintTop_toTopOf="@+id/toggleGramRi" />

    <ImageView
        android:id="@+id/fourthFoodPicRi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintStart_toStartOf="@+id/guideline18"
        app:srcCompat="@drawable/foodsrikoriander" />

    <ImageView
        android:id="@+id/thirdFoodPicRi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        app:layout_constraintBottom_toBottomOf="@+id/fourthFoodPicRi"
        app:layout_constraintStart_toStartOf="@+id/guideline18"
        app:srcCompat="@drawable/foodsripopcorn" />

    <ImageView
        android:id="@+id/firstFoodPicRi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/secondFoodPicRi"
        app:layout_constraintStart_toStartOf="@+id/guideline18"
        app:layout_constraintTop_toTopOf="@+id/guideline13"
        app:layout_constraintVertical_bias="0.708"
        app:srcCompat="@drawable/foodsribellpepper" />

    <ImageView
        android:id="@+id/scanBtnRi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toTopOf="@+id/guideline14"
        app:layout_constraintVertical_bias="0.98"
        app:srcCompat="@drawable/scanbutton" />

    <ImageView
        android:id="@+id/secondFoodPicRi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-7dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/thirdFoodPicRi"
        app:layout_constraintStart_toStartOf="@+id/guideline18"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981"
        app:srcCompat="@drawable/foodsrimashedpotatoes" />

    <TextView
        android:id="@+id/whatIsVitaminRi"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:text="@string/WhatIsCVitaminText"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toStartOf="@+id/guideline19"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="@+id/guideline18"
        app:layout_constraintTop_toTopOf="@+id/guideline24" />

    <TextView
        android:id="@+id/vitaminNameRi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline23" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WhatIsCVitamin"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/guideline21"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/whatIsVitaminRi"
        app:layout_constraintTop_toTopOf="@+id/guideline17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.39" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90794015" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.34" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.023014959" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.048661802" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96107054" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9689298" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06674338" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15189873" />
</androidx.constraintlayout.widget.ConstraintLayout>